[package]
name = "highload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
rand = "0.8.5"
#lexical = "^6.0"
#lexical-core = { version = "0.8.5", features = [] }

[profile.release]
debug = true

[features]
reopen_stdout = []
default = ["reopen_stdout"]